# teeny

./: .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  diagram.json  justfile  package.json  partitions.csv  rust-toolchain.toml  rustfmt.nightly.toml  wokwi.toml
.cargo/: config.toml
.github/workflows/: ci.yml
site/: astro.config.mjs
site/src/pages/: index.astro
src/: adc.rs  alloc.rs  auth.rs  ble.rs  blink.rs  buttons.rs  data.rs  dhcp.rs  display.rs  errors.rs  lib.rs  logger.rs  main.rs  net.rs  potentiometer.rs  update.rs  volume.rs
