[package]
name = "teeny"
version = "0.1.0"
authors = ["Sycrosity <72102935+Sycrosity@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.18.0", features = ["async", "embedded-io"] }

esp-hal-embassy = { version = "0.1.0", features = [
  "integrated-timers",
  "time-timg0",
] }

esp-backtrace = { version = "0.12.1", features = [
  "exception-handler",
  "panic-handler",
  "println",
] }

esp-println = { version = "0.9.1", features = ["uart"] }
#allocation support for esp devices
esp-alloc = { version = "0.4.0", optional = true }

#for wifi connectivity for esp controllers.
esp-wifi = { version = "0.6.0", features = [
  "phy-enable-usb",
  "utils",
  "wifi",
  "embassy-net",
  # "wifi-logs",
  "dhcpv4",
], optional = true }

heapless = "0.8.0"

smoltcp = { version = "0.11.0", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-igmp",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
], optional = true }

#the gold standard for logging in rust
log = "0.4.20"
#implimentation of the c "libm" maths library
libm = "0.2.8"
#for making static variables at compile time
static_cell = { version = "2.0.0", features = ["nightly"] }

#traits and functions for working with embedded graphics in rust
embedded-graphics = { version = "0.8.1", features = ["nalgebra_support"] }


#higher level embedded-hal traits for wifi, bluetooth, ect
embedded-svc = { version = "0.28.0", default-features = false, optional = true }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-async = "^1.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

# no_std http/s requests.
reqwless = { version = "0.12.0", optional = true, features = ["alloc"] }

# heapless = { version = "0.8.0", default-features = false }

embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = { version = "0.3.1" }
embassy-sync = "0.6.0"
embassy-net = { version = "0.4.0", features = [
  "proto-ipv4",
  "dns",
  "tcp",
  "medium-ethernet",
  "dhcpv4",
], optional = true }
embassy-embedded-hal = { version = "0.1.1" }

#ssd1306 display driver with embeddded graphics support
ssd1306 = { version = "0.9.0" }
display-interface = "0.5.0"
base64 = { version = "0.22.1", default-features = false }

[build-dependencies]
dotenv = "0.15.0"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release.package.esp-wifi]
opt-level = 3

[features]
default = ["log", "net", "alloc"]

alloc = ["dep:esp-alloc"]

net = ["dep:esp-wifi", "dep:embassy-net", "dep:embedded-svc", "dep:reqwless"]

log = [
  "embassy-net/log",
  "embassy-time/log",
  "embassy-sync/log",
  "embassy-executor/log",
  "embedded-svc/log",
  "esp-println/log",
  "esp-hal/log",
  "esp-wifi/log",
  "reqwless/log",
]

esp32 = [
  "esp-hal/esp32",
  "esp-hal-embassy/esp32",
  "esp-backtrace/esp32",
  "esp-println/esp32",
  "esp-wifi/esp32",
]

esp32c3 = [
  "esp-hal/esp32c3",
  "esp-hal-embassy/esp32c3",
  "esp-backtrace/esp32c3",
  "esp-println/esp32c3",
  "esp-wifi/esp32c3",
]

[patch.crates-io]
ssd1306 = { version = "0.9.0", git = "https://github.com/embedevices-rs/ssd1306", branch = "async" }
embassy-embedded-hal = { version = "0.1.1", git = "https://github.com/Sycrosity/embassy-embedded-hal" }
